--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,3 +1,4 @@
+CONFIG_LOCALVERSION="-cleanslate-140"
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -295,6 +296,9 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_SRAM=y
 CONFIG_UID_SYS_STATS=y
+CONFIG_UCI=y
+CONFIG_UCI_NOTIFICATIONS=y
+CONFIG_UCI_NOTIFICATIONS_SCREEN_CALLBACKS=y
 CONFIG_SCSI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
